// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compileRunbookToMachine (lifecycle cleanup structural snapshot) produces a stable structural config for DEFER transitions 1`] = `
{
  "context": {
    "finalVars": {},
    "forStack": [],
    "frontmatterOutputs": [],
    "iterationRetryCount": 0,
    "lifecycle": "running",
    "parentRetryCount": 0,
    "retryCount": 0,
    "substepCompletedCount": 0,
    "templateVars": {},
    "variables": {},
  },
  "id": "runbook",
  "initial": "step::1::1",
  "on": {
    "PENDING_FRONTIER_CONSUMED": {
      "actions": "[fn]",
    },
    "SET_VARIABLES": {
      "actions": "[fn]",
    },
  },
  "states": {
    "COMPLETE": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "STOPPED": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "step::1": {
      "always": [
        {
          "guard": "[fn]",
          "target": "STOPPED",
        },
        {
          "guard": "[fn]",
          "target": "step::1::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "STOPPED",
        },
      ],
    },
    "step::1::1": {
      "entry": "[fn]",
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::1::1::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::1::1::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": "[fn]",
          "target": "step::1",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::4",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::1",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::1::1",
        },
      },
    },
    "step::1::1::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::1::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::2::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::2::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::4",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::4",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::2",
        },
      },
    },
    "step::2::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::4",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::3": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::3::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::3::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::4",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::4",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::3",
        },
      },
    },
    "step::3::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::3::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::4",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::4": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::4::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::4::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::4",
          },
        ],
        "PASS": {
          "actions": {
            "params": {
              "action": {
                "type": "COMPLETE",
              },
            },
            "type": "setLastAction",
          },
          "target": "COMPLETE",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::4",
        },
      },
    },
    "step::4::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::4::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "COMPLETE",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "COMPLETE",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
  },
}
`;

exports[`compileRunbookToMachine (lifecycle cleanup structural snapshot) produces a stable structural config for FOR loop with BREAK 1`] = `
{
  "context": {
    "finalVars": {},
    "forStack": [],
    "frontmatterOutputs": [],
    "iterationRetryCount": 0,
    "lifecycle": "running",
    "parentRetryCount": 0,
    "retryCount": 0,
    "substepCompletedCount": 0,
    "templateVars": {},
    "variables": {},
  },
  "id": "runbook",
  "initial": "step::1::1",
  "on": {
    "PENDING_FRONTIER_CONSUMED": {
      "actions": "[fn]",
    },
    "SET_VARIABLES": {
      "actions": "[fn]",
    },
  },
  "states": {
    "COMPLETE": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "STOPPED": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "step::1": {
      "always": [
        {
          "guard": "[fn]",
          "target": "STOPPED",
        },
        {
          "guard": "[fn]",
          "target": "step::1::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::1::2",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "STOPPED",
        },
      ],
    },
    "step::1::1": {
      "entry": "[fn]",
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::1::1::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::1::1::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": "[fn]",
          "target": "step::1::2",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::1::2",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::1::1",
        },
      },
    },
    "step::1::1::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1::2",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::1::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1::2",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::2": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::1::2::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::1::2::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::1",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::1::2",
        },
      },
    },
    "step::1::2::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::2::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2": {
      "always": [
        {
          "guard": "[fn]",
          "target": "STOPPED",
        },
        {
          "guard": "[fn]",
          "target": "step::2::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::3",
        },
        {
          "actions": "[fn]",
          "guard": "loopExitedViaControl",
          "target": "step::3",
        },
        {
          "actions": "[fn]",
          "guard": "loopCompletedNormally",
          "target": "step::3",
        },
        {
          "actions": "[fn]",
          "guard": "anyIterationFailed",
          "target": "STOPPED",
        },
      ],
    },
    "step::2::1": {
      "entry": "[fn]",
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::2::1::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::2::1::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": "[fn]",
          "target": "step::2",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::2",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::2::1",
        },
      },
    },
    "step::2::1::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::2",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2::1::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::2",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::3": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::3::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::3::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": {
            "params": {
              "action": {
                "type": "COMPLETE",
              },
            },
            "type": "setLastAction",
          },
          "target": "COMPLETE",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::3",
        },
      },
    },
    "step::3::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::3::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "COMPLETE",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "COMPLETE",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
  },
}
`;

exports[`compileRunbookToMachine (lifecycle cleanup structural snapshot) produces a stable structural config for GOTO construct 1`] = `
{
  "context": {
    "finalVars": {},
    "forStack": [],
    "frontmatterOutputs": [],
    "iterationRetryCount": 0,
    "lifecycle": "running",
    "parentRetryCount": 0,
    "retryCount": 0,
    "substepCompletedCount": 0,
    "templateVars": {},
    "variables": {},
  },
  "id": "runbook",
  "initial": "step::1",
  "on": {
    "PENDING_FRONTIER_CONSUMED": {
      "actions": "[fn]",
    },
    "SET_VARIABLES": {
      "actions": "[fn]",
    },
  },
  "states": {
    "COMPLETE": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "STOPPED": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "step::1": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::1::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::1::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::3",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::1",
        },
      },
    },
    "step::1::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::3",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::2::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::2::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::3",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::2",
        },
      },
    },
    "step::2::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::3",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::3": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::3::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::3::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::3",
          },
        ],
        "PASS": {
          "actions": {
            "params": {
              "action": {
                "type": "COMPLETE",
              },
            },
            "type": "setLastAction",
          },
          "target": "COMPLETE",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::3",
        },
      },
    },
    "step::3::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::3::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "COMPLETE",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "COMPLETE",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
  },
}
`;

exports[`compileRunbookToMachine (lifecycle cleanup structural snapshot) produces a stable structural config for a representative runbook 1`] = `
{
  "context": {
    "finalVars": {},
    "forStack": [],
    "frontmatterOutputs": [],
    "iterationRetryCount": 0,
    "lifecycle": "running",
    "parentRetryCount": 0,
    "retryCount": 0,
    "substepCompletedCount": 0,
    "templateVars": {},
    "variables": {},
  },
  "id": "runbook",
  "initial": "step::1::1",
  "on": {
    "PENDING_FRONTIER_CONSUMED": {
      "actions": "[fn]",
    },
    "SET_VARIABLES": {
      "actions": "[fn]",
    },
  },
  "states": {
    "COMPLETE": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "STOPPED": {
      "entry": [
        {
          "params": {},
          "type": "storeFrontmatterOutputs",
        },
        "[fn]",
      ],
      "output": "[fn]",
      "type": "final",
    },
    "step::1": {
      "always": [
        {
          "guard": "[fn]",
          "target": "STOPPED",
        },
        {
          "guard": "[fn]",
          "target": "step::1::1",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::1::2",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "step::2",
        },
        {
          "actions": "[fn]",
          "guard": "[fn]",
          "target": "STOPPED",
        },
      ],
    },
    "step::1::1": {
      "entry": "[fn]",
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::1::1::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::1::1::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": "[fn]",
          "target": "step::1::2",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::1::2",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::1::1",
        },
      },
    },
    "step::1::1::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1::2",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::1::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1::2",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::2": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::1::2::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::1::2::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
        ],
        "PASS": {
          "actions": "[fn]",
          "target": "step::1",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::1::2",
        },
      },
    },
    "step::1::2::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::1::2::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            "[fn]",
          ],
          "target": "step::1",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2": {
      "on": {
        "COMMAND_RESULT": [
          {
            "guard": "[fn]",
            "target": "step::2::__capture-pass",
          },
          {
            "guard": "[fn]",
            "target": "step::2::__capture-fail",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
          },
        ],
        "FAIL": {
          "actions": {
            "params": {
              "action": {
                "type": "STOP",
              },
            },
            "type": "setLastAction",
          },
          "target": "STOPPED",
        },
        "GOTO": [
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::1",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::1::2",
          },
          {
            "actions": "[fn]",
            "guard": "[fn]",
            "target": "step::2",
          },
        ],
        "PASS": {
          "actions": {
            "params": {
              "action": {
                "type": "COMPLETE",
              },
            },
            "type": "setLastAction",
          },
          "target": "COMPLETE",
        },
        "RETRY": {
          "actions": "[fn]",
          "target": "step::2",
        },
      },
    },
    "step::2::__capture-fail": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "STOP",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "STOPPED",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
    "step::2::__capture-pass": {
      "invoke": {
        "input": "[fn]",
        "onDone": {
          "actions": [
            "[fn]",
            {
              "params": {
                "action": {
                  "type": "COMPLETE",
                },
              },
              "type": "setLastAction",
            },
          ],
          "target": "COMPLETE",
        },
        "onError": {
          "actions": "[fn]",
          "target": "STOPPED",
        },
        "src": "outputCaptureActor",
      },
      "tags": [
        "pending-machine-effect",
      ],
    },
  },
}
`;
